src/test/deca/syntax/invalid/test_lex/hello_world/include_circulaire.decah
#include "include_circulaire.decah"